<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/math_operation"
        style="@style/TextView"
        android:layout_height="80sp"
        android:textSize="40sp"
        android:ellipsize="start" />

    <TextView
        android:id="@+id/result_text"
        style="@style/TextView"
        android:layout_height="100sp"
        android:ellipsize="end"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_erase"
                style="@style/NumberButton"
                android:text="@string/key_erase" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_bracket"
                style="@style/NumberButton"
                android:text="@string/open_bracket" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_bracket"
                style="@style/NumberButton"
                android:text="@string/close_bracket" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_div"
                style="@style/NumberButton"
                android:text="@string/key_div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_7"
                style="@style/ActionButton"
                android:text="@string/key_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_8"
                style="@style/ActionButton"
                android:text="@string/key_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_9"
                style="@style/ActionButton"
                android:text="@string/key_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_mult"
                style="@style/NumberButton"
                android:text="@string/key_mult" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_4"
                style="@style/ActionButton"
                android:text="@string/key_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_5"
                style="@style/ActionButton"
                android:text="@string/key_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_6"
                style="@style/ActionButton"
                android:text="@string/key_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_plus"
                style="@style/NumberButton"
                android:text="@string/key_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_1"
                style="@style/ActionButton"
                android:text="@string/key_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_2"
                style="@style/ActionButton"
                android:text="@string/key_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_3"
                style="@style/ActionButton"
                android:text="@string/key_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_min"
                style="@style/NumberButton"
                android:text="@string/key_min" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_dot"
                style="@style/ActionButton"
                android:text="@string/key_dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_0"
                style="@style/ActionButton"
                android:text="@string/key_0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_back"
                style="@style/ActionButton"
                android:text="@string/key_back" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_equal"
                style="@style/NumberButton"
                android:text="@string/key_equal" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>